# mini_chat

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  api.py  architecture.md  config.py  main.py  models.py  pyproject.toml  requirements.txt  setup.py  ui.py
.cursor/rules/: mini-chatbot.mdc
mini_chat/: __init__.py  __main__.py  api.py  cli.py  config.py  ui.py  utils.py
scripts/: debug-mini-chat  mini-chat  run_tests.sh
tests/: README.md  conftest.py  test_api.py  test_config.py  test_main.py  test_models.py  test_ui.py
